--- a/views/partials/contact-section.ejs
+++ b/views/partials/contact-section.ejs
@@ -15,21 +15,26 @@
 						<div class="info-box">
 							<i class="bx bx-map"></i>
 							<h3>Our Address</h3>
-							<p>Nedre Banegate 3, 4014 Stavanger, Norway</p>
+							<p><%= company.address.street %>, 
+								<%= company.address.zipCode %> <%= company.address.city%>, <%= company.address.country %></p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="info-box mt-4">
 							<i class="bx bx-envelope"></i>
 							<h3>Email Us</h3>
-							<p>contact@cmtr.io</p>
+							<% company.email.forEach((email) => { %>
+								<p><strong><%= email.displayName %>:</strong> <%= email.email %></p>
+							<% }) %>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="info-box mt-4">
 							<i class="bx bx-phone-call"></i>
 							<h3>Call Us</h3>
-							<p>+47 999 99 999</p>
+							<% company.phone.forEach((phone) => { %>
+								<p><strong><%= phone.displayName%>:</strong> +<%= phone.countryCode%> <%= phone.number %></p>
+							<% }) %>
 						</div>
 					</div>
 				</div>
