--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,14 +19,6 @@
     <%- include('./partials/about-section') %>
     <!-- End About Section -->
 
-    <!-- ======= About Boxes Section ======= -->
-    <%- include('./partials/about-boxes') %>
-    <!-- End About Boxes Section -->
-
-    <!-- ======= Clients Section ======= -->
-    <%- include('./partials/clients-section') %>
-    <!-- End Clients Section -->
-
     <!-- ======= Features Section ======= -->
     <%- include('./partials/features-section') %>
     <!-- End Features Section -->
@@ -35,23 +27,36 @@
     <%- include('./partials/service-section') %>
     <!-- End Services Section -->
 
+    <!-- ======= Clients Section ======= -->
+    <%#- include('./partials/clients-section') %>
+    <!-- End Clients Section -->
+
+
     <!-- ======= Testimonials Section ======= -->
-    <%- include('./partials/testimonials-section') %>
+    <%#- include('./partials/testimonials-section') %>
     <!-- End Testimonials Section -->
 
+    <!-- ======= About Boxes Section ======= -->
+    <%- include('./partials/about-boxes') %>
+    <!-- End About Boxes Section -->
+
     <!-- ======= Portfolio Section ======= -->
-    <%- include('./partials/portfolio-section') %>
+    <%#- include('./partials/portfolio-section') %>
     <!-- End Portfolio Section -->
 
     <!-- ======= Team Section ======= -->
     <%- include('./partials/team-section') %>
     <!-- End Team Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <%- include('./partials/contact-section') %>
-    <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+
+  <!-- End #main -->
+
+  <!-- ======= Contact Section ======= -->
+  <%- include('./partials/contact-section') %>
+  <!-- End Contact Section -->
+
 
   <!-- ======= Footer ======= -->
   <%- include('./partials/footer') %>
