--- a/views/partials/about-boxes.ejs
+++ b/views/partials/about-boxes.ejs
@@ -12,7 +12,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title"><a href="<%= item.href%>"><%= item.title%></a></h5>
-							<p class="card-text"><%= item.paragraph%></p>
+							<p class="card-text"><%- marked(item.paragraph)%></p>
 						</div>
 					</div>
 				</div>
