--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,50 +5,47 @@
 
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-info">
-						<h3>Dewi</h3>
+						<h3><%= company.legalName %></h3>
 						<p>
-							A108 Adam Street <br>
-							NY 535022, USA<br><br>
-							<strong>Phone:</strong> +1 5589 55488 55<br>
-							<strong>Email:</strong> info@example.com<br>
+							<%= company.address.street %><br>
+							<%= company.address.zipCode %> <%= company.address.city%>, <%= company.address.country %>
+							<br><br>
+							<strong>Phone:</strong> (+<%= company.phone[0].countryCode%>) <%= company.phone[0].number %><br>
+							<strong>Email:</strong> <%= company.email[0].email %><br>
 						</p>
 						<div class="social-links mt-3">
-							<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-							<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-							<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-							<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-							<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+							<% company.social.forEach((account) => { %>
+								<a href="<%= account.href %>" class="<%= account.class %>"><i class="<%= account.logoClass %>"></i></a>
+							<% }) %>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-2 col-md-6 footer-links">
-					<h4>Useful Links</h4>
+					<h4><%= usefullLinks.title %></h4>
 					<ul>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+						
+						<% usefullLinks.items.forEach((item) => {%>
+							<li><i class="bx bx-chevron-right"></i> <a href="<%= item.href%>"><%= item.title %></a></li>						
+						<% }) %>
+
 					</ul>
 				</div>
 
 				<div class="col-lg-3 col-md-6 footer-links">
-					<h4>Our Services</h4>
+					<h4><%= ourServices.title %></h4>
 					<ul>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-						<li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+						<% ourServices.items.forEach((item) => { %>
+							<li><i class="bx bx-chevron-right"></i> <a href="<%= item.href %>"><%= item.title %></a></li>	
+						<% }) %>
 					</ul>
 				</div>
 
 				<div class="col-lg-4 col-md-6 footer-newsletter">
-					<h4>Our Newsletter</h4>
-					<p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+					<h4><%= newsletter.title %></h4>
+					<p><%= newsletter.paragraph %></p>
 					<form action="" method="post">
-						<input type="email" name="email"><input type="submit" value="Subscribe">
+						<input type="email" name="email"><input type="submit" value="<%= newsletter.subscribe %>">
 					</form>
 
 				</div>
@@ -59,14 +56,10 @@
 
 	<div class="container">
 		<div class="copyright">
-			&copy; Copyright <strong><span>Dewi</span></strong>. All Rights Reserved
+			&copy; Copyright <strong><span><%= company.legalName %></span></strong>. All Rights Reserved
 		</div>
 		<div class="credits">
-			<!-- All the links in the footer should remain intact. -->
-			<!-- You can delete the links only if you purchased the pro version. -->
-			<!-- Licensing information: https://bootstrapmade.com/license/ -->
-			<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/ -->
-			Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+			Designed by <a href="<%= company.href %>"><%= company.businessName %></a>
 		</div>
 	</div>
 </footer>
