--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <%- include('./partials/about-section') %>
+    <%#- include('./partials/about-section') %>
     <!-- End About Section -->
 
     <!-- ======= Features Section ======= -->
@@ -35,6 +35,12 @@
     <!-- ======= Testimonials Section ======= -->
     <%#- include('./partials/testimonials-section') %>
     <!-- End Testimonials Section -->
+
+    
+    <!-- ======= About Section ======= -->
+    <%- include('./partials/about-section') %>
+    <!-- End About Section -->
+
 
     <!-- ======= About Boxes Section ======= -->
     <%- include('./partials/about-boxes') %>
