--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1116,7 +1116,7 @@ section {
   transition: all 0.6s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.portfolio .portfolio-item .portfolio-info {
+.portfolio .portfolio-item .portfolio-info, div.rendered-conent blockquote {
   opacity: 0;
   position: absolute;
   left: 15px;
@@ -1165,6 +1165,12 @@ section {
   opacity: 1;
   bottom: 0;
 }
+
+/*--------------------------------------------------------------
+# Publication Details
+--------------------------------------------------------------*/
+
+
 
 /*--------------------------------------------------------------
 # Portfolio Details
@@ -1644,4 +1650,20 @@ section {
 
 #footer .credits a {
   transition: 0.3s;
+}
+
+
+/*--------------------------------------------------------------
+# Rendered Content
+--------------------------------------------------------------*/
+
+
+div.rendered-content img {
+  max-width: 100%;
+  height: auto;
+}
+
+div.rendered-content blockquote {
+  padding: 30px;
+  box-shadow: 0px 0 30px rgba(21, 34, 43, 0.08);
 }
