--- a/views/partials/features-section.ejs
+++ b/views/partials/features-section.ejs
@@ -21,7 +21,7 @@
 							<%- marked(item.body) %>
 						</div>
 						<div class="col-lg-6 order-1 order-lg-2 text-center">
-							<img src="<%= item.image.src %>" alt="<%= item.image.alt %>" class="img-fluid">
+							<a href="<%= item.href %>" ><img src="<%= item.image.src %>" alt="<%= item.image.alt %>" class="img-fluid"></a>
 						</div>
 					</div>
 				</div>
