--- a/views/partials/hero-section.ejs
+++ b/views/partials/hero-section.ejs
@@ -1,7 +1,7 @@
 <section id="hero">
 	<div class="hero-container" data-aos="fade-up" data-aos-delay="150">
-		<h1><%= hero.title %></h1>
-		<h2><%= hero.subTitle %></h2>
+		<h1><%= home.hero.title %></h1>
+		<h2><%= home.hero.subTitle %></h2>
 		<div class="d-flex">
 			<a href="#contact" class="btn-get-started scrollto">Get Started</a>
 			<!--
