--- a/views/partials/about-boxes.ejs
+++ b/views/partials/about-boxes.ejs
@@ -2,7 +2,7 @@
 	<div class="container" data-aos="fade-up">
 
 		<div class="row">
-			<% aboutBoxes.forEach((item) => { %>
+			<% about.aboutBoxes.forEach((item) => { %>
 
 				<div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
 					<div class="card">
