--- a/views/partials/features-section.ejs
+++ b/views/partials/features-section.ejs
@@ -2,7 +2,7 @@
 	<div class="container" data-aos="fade-up">
 
 		<ul class="nav nav-tabs row d-flex">
-			<% features.forEach((item, index) => { %>
+			<% services.features.forEach((item, index) => { %>
 				<li class="nav-item col-3">
 					<a class="nav-link <%= index < 1 ? "active show" : "" %>" data-bs-toggle="tab" href="#tab-<%= index+1 %>">
 						<i class="<%= item.logoClass%>"></i>
@@ -14,7 +14,7 @@
 		</ul>
 
 		<div class="tab-content">
-			<% features.forEach((item, index) => { %>
+			<% services.features.forEach((item, index) => { %>
 				<div class="tab-pane <%= index < 1 ? "active show" : "" %>" id="tab-<%= index+1 %>">
 					<div class="row">
 						<div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
