--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,9 +2,9 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title><%= title %></title>
-	<meta content="" name="description">
-	<meta content="" name="keywords">
+	<title><%= common.title %></title>
+	<meta content="<%= common.meta.description %>" name="description">
+	<meta content="<%= common.meta.keywords %>" name="keywords">
 
 	<!-- Favicons -->
 	<link href="/assets/img/favicon.png" rel="icon">
