--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <header id="header" class="fixed-top <%= page === "home" ? "" : "header-inner-pages"%>">
   <div class="container d-flex align-items-center justify-content-between">
 
-    <h1 class="logo"><a href="<%= navbar.logo.href %>"><%= navbar.logo.title %></a></h1>
+    <h1 class="logo"><a href="<%= navigation[navVersion].navbar.logo.href %>"><%= navigation[navVersion].navbar.logo.title %></a></h1>
     <!-- Uncomment below if you prefer to use an image logo -->
     <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -22,7 +22,7 @@
 
     <nav id="navbar" class="navbar">
       <ul>
-        <% navbar.navbar.forEach((item) => { %>
+        <% navigation[navVersion].navbar.navbar.forEach((item) => { %>
           <% if (item.type == 'link' || item.type == 'scrollto') { %>
             <li>
               <a class="<%= getNavlinkClass(item) %>" href="<%= item.href %>"><%= item.title %></a>
@@ -53,38 +53,6 @@
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav>
-<!--
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
-        <li><a class="nav-link scrollto" href="#services">Services</a></li>
-        <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-        <li><a class="nav-link scrollto" href="#team">Team</a></li>
-        <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="#">Drop Down 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-              <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
-          </ul>
-        </li>
-        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        <li><a class="nav-link getstarted scrollto" href="#about">Get Started</a></li>
-      </ul>
-      <i class="bi bi-list mobile-nav-toggle"></i> 
-    </nav>
--->
-    <!-- .navbar -->
-
   </div>
-</header><!-- End Header -->
+</header>
+<!-- End Header -->
