--- a/views/partials/testimonials-section.ejs
+++ b/views/partials/testimonials-section.ejs
@@ -4,7 +4,7 @@
 		<div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
 			<div class="swiper-wrapper">
 
-				<% testimonials.forEach((item) => { %>
+				<% about.testimonials.forEach((item) => { %>
 					<div class="swiper-slide">
 						<div class="testimonial-item">
 							<img src="<%= item.image.src %>" class="testimonial-img" alt="<%= item.image.alt %>">
