--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -25,7 +25,7 @@
 
 
 		<!-- ======= Testimonials Section ======= -->
-		<%- include('../partials/testimonials-section') %>
+		<%#- include('../partials/testimonials-section') %>
 		<!-- End Testimonials Section -->
 
 	</main><!-- End #main -->
