--- a/views/partials/team-section.ejs
+++ b/views/partials/team-section.ejs
@@ -8,7 +8,7 @@
 
 		<div class="row">
 
-			<% about.team.team.forEach((item) => { %>
+			<% Object.values(about.team.team).forEach((item) => { %>
 				<div class="col-lg-6 col-md-6">
 					<%- include('./team-member-card', { item })%>
 				</div>
