--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -44,10 +44,14 @@
 				<div class="col-lg-4 col-md-6 footer-newsletter">
 					<h4><%= common.newsletter.title %></h4>
 					<p><%= common.newsletter.paragraph %></p>
-					<form action="" method="post">
-						<input type="email" name="email"><input type="submit" value="<%= common.newsletter.subscribe %>">
-					</form>
-
+					<form action="https://localhost:3000/api/newsletter" method="post" role="form" class="php-newsletter-from" >
+					<input type="email" name="email"><input type="submit" value="<%= common.newsletter.subscribe %>">
+					<div class="my-3">
+						<div class="loading">Loading</div>
+						<div class="error-message"></div>
+						<div class="sent-message">Your newsletter subscription request is sent. Thank you!</div>
+					</div>
+				</form>
 				</div>
 
 			</div>
