--- a/views/publication/details.ejs
+++ b/views/publication/details.ejs
@@ -37,6 +37,7 @@
 
 						<div>
 							<h2>Related Articles</h2>
+							<%- include("../partials/related-articles") %>
 						</div>
 					</div>
 
